<resources>
    <string name="app_name">Tag VPN</string>

    <string name="open">Start Navigation</string>
    <string name="close">Close Navigation</string>


    <string name="privacy_policy">Privacy Police</string>
    <string name="accept_and_continue">ACCEPT AND CONTINUE</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_fb">Continue with Facebook</string>
    <string name="skip">Skip</string>
    <string name="connect">Connect</string>
    <string name="select_location">Select Location</string>
    <string name="tram_of_service">Tram of service</string>
    <string name="free_unlimited_service">Free &amp; Unlimited Speed</string>
    <string name="go_premium">Go Premium</string>


    //tram
    <string name="tram_home">By using the app, you agree to our Terms Of service and Privacy policy</string>


    //tram
    <string name="we_collect">We Collect:</string>
    <string name="tram10">Lorem ipsum dolor sit amet, consectetur elit.</string>
    <string name="tram20">Lorem ipsum dolor sit amet, consectetur elit. Sollicitudin tortor quis lorem vitae. Suspendisse tincidunt in purus ultrices.</string>
    <string name="tram">Lorem ipsum dolor sit amet.</string>
    <string name="annual">Annual</string>
    <string name="bestvalue">Best Value</string>
    <string name="annual_text">First 14 days free. Then $12.99 / Year</string>
    <string name="monthly_text">First 7 days free. Then $1.08 / Monthly</string>
    <string name="subscription_text">You subscription will auto-renew and you will be charged the amount specified above each month or year (as applicable) until you cancel your subscription before the end of then-current subscription period.</string>
    <string name="monthly">Monthly</string>
    <string name="settings">Settings</string>
    <string name="security">Security</string>
    <string name="additional">additional</string>
    <string name="version">Version 2.02.00</string>
    <string name="exit_msg">Are you sure for exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
</resources>