<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.PolicyActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/tram_acceptBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="16dp"

            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins"
                android:text="Your Privacy Comes First"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:text="@string/tram20"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/tram20"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/we_collect"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"/>
               <TableLayout
                   android:layout_marginBottom="10dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
                   <TableRow>
                       <TextView
                           android:layout_column="1"
                           android:layout_marginRight="10dp"
                           android:text="•"/>
                       <TextView
                           android:layout_column="2"
                           android:layout_width="wrap_content"
                           android:text="@string/tram20"/>
                   </TableRow>
                   <TableRow>
                       <TextView
                           android:layout_column="1"
                           android:layout_marginRight="10dp"
                           android:text="•"/>
                       <TextView
                           android:layout_column="2"
                           android:layout_width="wrap_content"
                           android:text="@string/tram20"/>
                   </TableRow>
                   <TableRow>
                       <TextView
                           android:layout_column="1"
                           android:layout_marginRight="10dp"
                           android:text="•"/>
                       <TextView
                           android:layout_column="2"
                           android:layout_width="wrap_content"
                           android:text="@string/tram20"/>
                   </TableRow>
                   <TableRow>
                       <TextView
                           android:layout_column="1"
                           android:layout_marginRight="10dp"
                           android:text="•"/>
                       <TextView
                           android:layout_column="2"
                           android:layout_width="wrap_content"
                           android:text="@string/tram20"/>
                   </TableRow>
               </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:text="@string/privacy_policy"
                android:autoLink="web"
                android:id="@+id/privacy_policy_tram_id"
              android:textColor="@color/purple_500"
                android:layout_height="wrap_content"/>


        </LinearLayout>




    </ScrollView>


    <Button
        android:id="@+id/tram_acceptBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_shape"
        android:text="@string/accept_and_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>