<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.SkipActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/image_slider"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:iss_auto_cycle="true"
            app:iss_delay="0"
            app:iss_period="2000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="Acess from anywhere"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:text="@string/tram20"
            android:layout_margin="16dp"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
           android:id="@+id/googleLay"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:padding="5dp"

            android:background="@drawable/button_shape"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/gggggg"/>
            <TextView
                android:textColor="@color/white"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_with_google"
                android:textSize="16sp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/fbLay"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:padding="5dp"

            android:background="@drawable/button_shape"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/fffffff"/>
            <TextView
                android:textColor="@color/white"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_with_google"
                android:textSize="16sp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/skipLay"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:padding="5dp"

            android:background="@drawable/button_shape"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:textColor="@color/white"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textSize="16sp"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>


</ScrollView>