<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">



   <com.google.android.material.appbar.AppBarLayout
       android:id="@+id/appBarLayout2"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@android:color/transparent"
       android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
       app:elevation="0dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent">

      <androidx.appcompat.widget.Toolbar
          android:id="@+id/toolBarMain"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:popupTheme="@style/Theme.Design.Light"
          />

   </com.google.android.material.appbar.AppBarLayout>

   <LinearLayout
       android:id="@+id/premium_Layout"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@drawable/button_50_round"
       android:gravity="center"
       android:padding="5dp"
       android:orientation="horizontal"
       app:layout_constraintBottom_toBottomOf="@+id/appBarLayout2"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent">

      <ImageView
          android:layout_width="16dp"
          android:layout_height="16dp"
          android:layout_marginLeft="15dp"
          android:layout_marginRight="10dp"
          android:src="@drawable/pm" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginRight="15dp"
          android:text="Go Premium"
          android:textColor="@color/black"
          android:textSize="12sp"
          android:textStyle="bold" />
   </LinearLayout>




      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center"
          android:orientation="vertical">

         <ImageView
             android:id="@+id/imageViewOFF"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_marginTop="150dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/logo" />

         <com.google.android.material.button.MaterialButton
             android:id="@+id/connectBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="60dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="60dp"
             android:background="@drawable/button_shape"
             android:text="@string/connect"
             android:textAllCaps="false"
             android:textStyle="bold"
             android:visibility="visible"
             app:icon="@drawable/connect"
             app:iconGravity="textEnd"
             app:iconPadding="20dp"
             app:iconSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/timeText" />

         <com.google.android.material.button.MaterialButton
             android:id="@+id/discannectBtn"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="60dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="60dp"
             android:backgroundTint="@android:color/transparent"
             android:gravity="center"
             android:padding="12dp"
             android:text="Disconnet"
             android:textAllCaps="false"
             android:textColor="@color/red"
             android:textStyle="bold"
             android:visibility="invisible"
             app:cornerRadius="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/timeText"
             app:strokeColor="@color/purple_500"
             app:strokeWidth="2dp" />

         <com.google.android.material.button.MaterialButton
             android:id="@+id/selectBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="60dp"
             android:layout_marginTop="110dp"
             android:layout_marginEnd="60dp"
             android:background="@drawable/button_shape"
             android:text="@string/select_location"
             android:textAllCaps="false"

             android:textStyle="bold"
             app:icon="@drawable/arrow"
             app:iconGravity="textEnd"
             app:iconPadding="20dp"
             app:iconSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/timeText" />

         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/itemLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="60dp"
             android:layout_marginTop="110dp"
             android:layout_marginEnd="60dp"
             android:background="@drawable/button_shape"
             android:padding="5dp"

             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/timeText"
             tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="USA"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/profile_image"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Free and Unlimited Speed"
                android:textColor="@color/white"
                android:textSize="10dp"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/usa"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/neton" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="50 ms"
                android:textColor="@color/white"
                android:textSize="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                app:layout_constraintEnd_toStartOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="@+id/imageView5" />

         </androidx.constraintlayout.widget.ConstraintLayout>
         <TextView
             android:id="@+id/timeText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="10:10:10"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageViewOFF" />

         <ImageView
             android:id="@+id/imageViewON"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:visibility="invisible"
             android:layout_marginTop="150dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/logo2" />

      </androidx.constraintlayout.widget.ConstraintLayout>


   <TextView
       android:id="@+id/textView2"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
       android:layout_marginEnd="16dp"
       android:layout_marginBottom="8dp"
       android:gravity="center"
       android:textSize="12dp"
       android:text="@string/tram_home"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent" />
   </androidx.constraintlayout.widget.ConstraintLayout>
   <com.google.android.material.navigation.NavigationView
       app:menu="@menu/nav"
       app:headerLayout="@layout/header"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:layout_gravity="start"
       android:id="@+id/navigationView"/>
</androidx.drawerlayout.widget.DrawerLayout>